# Ritual

./: .gitignore  CMakeLists.txt  build.sh
docs/: BUILD.md  CHANGELOG  RSLang.md
src/: main.cpp
src/core/: Executor.h  Helpers.h  Manager.h  Parser.cpp  Parser.h  Scheduler.h  Types.h  Watcher.h  example.RSL
tests/: desktop_watcher.RSL  example.RSL  example2.RSL
